k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-svc
  namespace: devops-demo
  labels:
    app: devops-app
spec:
  type: LoadBalancer
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 5000
